--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,86 +1,78 @@
-html,body,.page
-{
-color:#888;
-width:100%;height:100%;
-font-family:"arial";
-}
-.page
-{display:none;}
-
-a{text-decoration:none;}
-
-a:active
-{
-color:#888;
+html, body {
+	color: #888;
+	width: 100%;
+	height: 100%;
+	font-family: Arial;
+	margin: 0;
+	padding: 0;
 }
 
-a:visited
-{
-color:#888;
+/* General layout of the screen */
+#screen {
+	width: 100%;
+	height: 100%;
+	float: left;
+	overflow: hidden;
+	background-color: #222;
 }
 
-a:hover
-{
-color:#BBB;
+#screen > div {
+	text-align: center;
+	height: 100%;
 }
 
-.logo
-{width:100%;margin-top:15%}
-
-body{background-color:#222;}
-
-.sub{padding-left:15px;padding-right:15px;text-align:center;background-color:#333;box-shadow:inset 0px -5px 0px 5px #222;}
-
-.block{margin-left:-10px;border:5px solid #555;padding:15px 5px 5px 5px;}
-
-
-
-@media all and (min-width:1280px){
-    .page{
-    display:-webkit-flex;
-    -webkit-justify-content:
-    space-around;
-    -webkit-align-items: center;
-    }
-
-    .block{
-    width:1240px;
-    height:680px;
-    display:-webkit-flex;
-    }
-
-    .container{
-    display:-webkit-flex;
-    }
-
-    section.container.service,section.container.menu{
-    display:-webkit-flex;
-    -webkit-flex:1;
-    }
-
-    section.container.infos{-webkit-flex:6;}
-    .item{-webkit-flex:1 100%;}
-    .halfitem{-webkit-flex:1 50%;}
-    .service,.meteo,.stib,.menu,.infos{-webkit-flex-direction:column;}
-    article.container.transport{-webkit-flex-wrap:wrap;}
-    .meteo,.stib{-webkit-flex:2;}
-    .info{-webkit-flex:3;}
-    .banner{display:-webkit-flex;-webkit-justify-content:center;-webkit-align-items: center;-webkit-flex:1;}
-    nav{-webkit-flex:1;}
-    img.link{width:90%;margin:2%;}
-    div.menutitle{font-size:18px;}
-    .message{font-size:28pt;}
-
-    }
-
-@media all and (min-width:1440px){
-    .block{width:1400px;height:770px;display:-webkit-flex;}
-    div.menutitle{font-size:20px;}
-    .message{font-size:30pt;}
+#screen > div > div {
+	padding: 5px;
+	background-color: #333;
 }
 
-@media all and (min-width:1920px){
-    .block{width:1880px;height:1040px;display:-webkit-flex;}
-    div.menutitle{font-size:24px;}
-    .message{font-size:34pt;}
+#screen > div > div + div {
+	margin-top: 10px;
+}
+
+/* Left pane */
+#left {
+	float: left;
+	width: 150px;
+	margin-right: 10px;
+}
+
+/* Main pane */
+#main {
+	overflow: hidden;
+	
+	height: 100%;
+	position: relative;
+}
+
+#main > div:nth-child(1) {
+	position: absolute;
+	width: 100%;
+	top: 0px;
+	bottom: 70px;
+}
+
+#main > div:nth-child(2) {
+	position: absolute;
+	width: 100%;
+	bottom: 0px;
+	height: 50px;
+}
+
+/* Right pane */
+#right {
+	float: right;
+	width: 150px;
+	margin-left: 10px;
+}
+
+/* Rules for small screens */
+@media all and (max-width: 800px) {
+	#left {
+		display: none;
+	}
+	
+	#right {
+		display: none;
+	}
 }
