--- a/modules/warning/style.css
+++ b/modules/warning/style.css
@@ -9,7 +9,7 @@ div#warning > ul {
 	padding: 0px;
 	overflow: hidden;
 	list-style-type: none;
-	width: 200%;
+	display: none;
 }
 
 div#warning > ul > li {
